--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 COPY . .
 
 RUN go mod init app
+RUN go get github.com/gin-gonic/gin
+RUN go get github.com/rs/cors
 RUN go get github.com/gorilla/websocket
 RUN go build
 EXPOSE 8080
