Fix: Dockerfile add go get redis

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ RUN go mod init app
 RUN go get github.com/gin-gonic/gin
 RUN go get github.com/rs/cors
 RUN go get github.com/gorilla/websocket
+RUN go get github.com/go-redis/redis/v8
 RUN go build
 EXPOSE 8080
 
