--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN go mod init app
 RUN go get github.com/gin-gonic/gin
-RUN go get github.com/rs/cors
+RUN go get github.com/gin-contrib/cors
 RUN go get github.com/gorilla/websocket
 RUN go get github.com/go-redis/redis/v8
 RUN go build
