--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,39 @@
 version: '3.8'
 
 services:
+  db:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: 'chatroom'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      - '3306:3306'
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
+
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      - '8081:80'
+    restart: always
+
   backend:
     build:
       context: backend
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
+    depends_on:
+      - db
+    restart: always
 
   frontend:
     image: nginx:1.17.1-alpine
@@ -14,3 +41,6 @@ services:
       - ./frontend:/usr/share/nginx/html
     ports:
       - '80:80'
+
+volumes:
+  db_data: {}
